--- a/publications.html
+++ b/publications.html
@@ -130,7 +130,13 @@
       text-decoration: none;
     }
 
-    .publication-card:hover {
+    .publication-card:hover,
+    .publication-card:focus {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    .publication-card.hoverable:hover {
       transform: translateY(-4px);
       box-shadow: 0 25px 55px rgba(15, 23, 42, 0.12);
       background-color: rgba(0, 0, 0, 0.04);
@@ -249,68 +255,68 @@
         </div>
 
         <h3 class="pub-section-title">Published</h3>
-        <a class="publication-card ftco-animate" href="https://academic.oup.com/jcde/article/12/10/133/8267850" target="_blank" rel="noopener noreferrer">
-          <span class="pub-label"><strong>11. Journal of Computational Design and Engineering</strong> (IF: 6.1, JCR top 6.6%)</span>
+        <a class="publication-card ftco-animate hoverable" href="https://academic.oup.com/jcde/article/12/10/133/8267850" target="_blank" rel="noopener noreferrer">
+          <span class="pub-label"><strong>11.</strong> Journal of Computational Design and Engineering (IF: 6.1, JCR top 6.6%)</span>
           <p><strong>Year:</strong> 2025</p>
           <p><strong>Authors:</strong> <span class="yang">S. Yang</span>, R. Vinuesa, and N. Kang</p>
           <p><strong>Title:</strong> Model-Agnostic AI Framework with Explicit Time Integration for Long-Term Fluid Dynamics Prediction</p>
         </a>
-        <a class="publication-card ftco-animate" href="https://www.sciencedirect.com/science/article/pii/S0952197625021505" target="_blank" rel="noopener noreferrer">
-          <span class="pub-label"><strong>10. Engineering Applications of Artificial Intelligence</strong> (IF: 8.0, JCR top 2.6%)</span>
+        <a class="publication-card ftco-animate hoverable" href="https://www.sciencedirect.com/science/article/pii/S0952197625021505" target="_blank" rel="noopener noreferrer">
+          <span class="pub-label"><strong>10.</strong> Engineering Applications of Artificial Intelligence (IF: 8.0, JCR top 2.6%)</span>
           <p><strong>Year:</strong> 2025</p>
           <p><strong>Authors:</strong> S. Lee, <span class="yang">S. Yang</span>, and N. Kang</p>
           <p><strong>Title:</strong> Multi-objective Generative Design Framework and Realization for Quasi-serial Manipulator: Considering Kinematic and Dynamic Performance</p>
         </a>
-        <a class="publication-card ftco-animate" href="https://www.sciencedirect.com/science/article/pii/S0045782525005262" target="_blank" rel="noopener noreferrer">
-          <span class="pub-label"><strong>9. Computer Methods in Applied Mechanics and Engineering</strong> (IF: 7.3, JCR top 2.6%)</span>
+        <a class="publication-card ftco-animate hoverable" href="https://www.sciencedirect.com/science/article/pii/S0045782525005262" target="_blank" rel="noopener noreferrer">
+          <span class="pub-label"><strong>9.</strong> Computer Methods in Applied Mechanics and Engineering (IF: 7.3, JCR top 2.6%)</span>
           <p><strong>Year:</strong> 2025</p>
           <p><strong>Authors:</strong> <span class="yang">S. Yang</span>, Y. Lee, and N. Kang</p>
           <p><strong>Title:</strong> Data-Efficient Deep Operator Network for Unsteady Flow: A Multi-Fidelity Approach with Physics-Guided Subsampling</p>
         </a>
-        <a class="publication-card ftco-animate" href="https://www.sciencedirect.com/science/article/pii/S0957417425005299" target="_blank" rel="noopener noreferrer">
-          <span class="pub-label"><strong>8. Expert Systems with Applications</strong> (IF: 7.5, JCR top 5.2%)</span>
+        <a class="publication-card ftco-animate hoverable" href="https://www.sciencedirect.com/science/article/pii/S0957417425005299" target="_blank" rel="noopener noreferrer">
+          <span class="pub-label"><strong>8.</strong> Expert Systems with Applications (IF: 7.5, JCR top 5.2%)</span>
           <p><strong>Year:</strong> 2025</p>
           <p><strong>Authors:</strong> J. Kim, J. Park, N. Kim, Y. Yu, K. Chang, C.S. Woo, <span class="yang">S. Yang (co-corresponding author)</span>, and N. Kang</p>
           <p><strong>Title:</strong> Physics-Constrained Graph Neural Networks for Spatio-Temporal Prediction of Drop Impact on OLED Display Panels</p>
         </a>
-        <a class="publication-card ftco-animate" href="https://www.sciencedirect.com/science/article/pii/S0045782524003311" target="_blank" rel="noopener noreferrer">
-          <span class="pub-label"><strong>7. Computer Methods in Applied Mechanics and Engineering</strong> (IF: 7.3, JCR top 2.6%)</span>
+        <a class="publication-card ftco-animate hoverable" href="https://www.sciencedirect.com/science/article/pii/S0045782524003311" target="_blank" rel="noopener noreferrer">
+          <span class="pub-label"><strong>7.</strong> Computer Methods in Applied Mechanics and Engineering (IF: 7.3, JCR top 2.6%)</span>
           <p><strong>Year:</strong> 2024</p>
           <p><strong>Authors:</strong> <span class="yang">S. Yang</span>, H. Kim, Y. Hong, K. Yee, R. Maulik, and N. Kang</p>
           <p><strong>Title:</strong> Data-driven Physics-Informed Neural Networks: A Digital Twin Perspective</p>
         </a>
-        <a class="publication-card ftco-animate" href="https://www.sciencedirect.com/science/article/pii/S0952197624000290" target="_blank" rel="noopener noreferrer">
-          <span class="pub-label"><strong>6. Engineering Applications of Artificial Intelligence</strong> (IF: 8.0, JCR top 2.6%)</span>
+        <a class="publication-card ftco-animate hoverable" href="https://www.sciencedirect.com/science/article/pii/S0952197624000290" target="_blank" rel="noopener noreferrer">
+          <span class="pub-label"><strong>6.</strong> Engineering Applications of Artificial Intelligence (IF: 8.0, JCR top 2.6%)</span>
           <p><strong>Year:</strong> 2024</p>
           <p><strong>Authors:</strong> <span class="yang">S. Yang</span>, and K. Yee</p>
           <p><strong>Title:</strong> Towards Reliable Uncertainty Quantification via Deep Ensembles in Multi-output Regression Task</p>
         </a>
-        <a class="publication-card ftco-animate" href="https://www.sciencedirect.com/science/article/pii/S1270963823004546" target="_blank" rel="noopener noreferrer">
-          <span class="pub-label"><strong>5. Aerospace Science and Technology</strong> (IF: 5.6, JCR top 7.4%)</span>
+        <a class="publication-card ftco-animate hoverable" href="https://www.sciencedirect.com/science/article/pii/S1270963823004546" target="_blank" rel="noopener noreferrer">
+          <span class="pub-label"><strong>5.</strong> Aerospace Science and Technology (IF: 5.6, JCR top 7.4%)</span>
           <p><strong>Year:</strong> 2023</p>
           <p><strong>Authors:</strong> Y. Hong, D. Lee, <span class="yang">S. Yang</span>, H. Kook, and K. Yee</p>
           <p><strong>Title:</strong> Exploration of stacked rotor designs for aerodynamics in hover</p>
         </a>
-        <a class="publication-card ftco-animate" href="https://link.springer.com/article/10.1007/s00366-022-01617-6" target="_blank" rel="noopener noreferrer">
-          <span class="pub-label"><strong>4. Engineering with Computers</strong> (IF: 8.7, JCR top 2.6%)</span>
+        <a class="publication-card ftco-animate hoverable" href="https://link.springer.com/article/10.1007/s00366-022-01617-6" target="_blank" rel="noopener noreferrer">
+          <span class="pub-label"><strong>4.</strong> Engineering with Computers (IF: 8.7, JCR top 2.6%)</span>
           <p><strong>Year:</strong> 2023</p>
           <p><strong>Authors:</strong> <span class="yang">S. Yang</span>, S. Lee, and K. Yee</p>
           <p><strong>Title:</strong> Inverse design optimization framework via a two-step deep learning approach: application to a wind turbine airfoil</p>
         </a>
-        <a class="publication-card ftco-animate" href="https://pubs.aip.org/aip/pof/article/34/7/076103/2847447/Physics-aware-reduced-order-modeling-of-transonic" target="_blank" rel="noopener noreferrer">
-          <span class="pub-label"><strong>3. Physics of Fluids</strong> (IF: 4.6, JCR top 4.4%)</span>
+        <a class="publication-card ftco-animate hoverable" href="https://pubs.aip.org/aip/pof/article/34/7/076103/2847447/Physics-aware-reduced-order-modeling-of-transonic" target="_blank" rel="noopener noreferrer">
+          <span class="pub-label"><strong>3.</strong> Physics of Fluids (IF: 4.6, JCR top 4.4%)</span>
           <p><strong>Year:</strong> 2022</p>
           <p><strong>Authors:</strong> Y.E. Kang, <span class="yang">S. Yang (co-first author)</span>, and K. Yee</p>
           <p><strong>Title:</strong> Physics-aware reduced-order modeling of transonic flow via β-variational autoencoder</p>
         </a>
-        <a class="publication-card ftco-animate" href="https://arc.aiaa.org/doi/10.2514/1.J061643" target="_blank" rel="noopener noreferrer">
-          <span class="pub-label"><strong>2. AIAA Journal</strong> (IF: 2.5, JCR top 30.9%)</span>
+        <a class="publication-card ftco-animate hoverable" href="https://arc.aiaa.org/doi/10.2514/1.J061643" target="_blank" rel="noopener noreferrer">
+          <span class="pub-label"><strong>2.</strong> AIAA Journal (IF: 2.5, JCR top 30.9%)</span>
           <p><strong>Year:</strong> 2022</p>
           <p><strong>Authors:</strong> <span class="yang">S. Yang</span>, and K. Yee</p>
           <p><strong>Title:</strong> Comment on “Novel approach for selecting low-fidelity scale factor in multifidelity metamodeling”</p>
         </a>
-        <a class="publication-card ftco-animate" href="https://arc.aiaa.org/doi/10.2514/1.C036489" target="_blank" rel="noopener noreferrer">
-          <span class="pub-label"><strong>1. Journal of Aircraft</strong> (IF: 2.2, JCR top 39.7%)</span>
+        <a class="publication-card ftco-animate hoverable" href="https://arc.aiaa.org/doi/10.2514/1.C036489" target="_blank" rel="noopener noreferrer">
+          <span class="pub-label"><strong>1.</strong> Journal of Aircraft (IF: 2.2, JCR top 39.7%)</span>
           <p><strong>Year:</strong> 2022</p>
           <p><strong>Authors:</strong> <span class="yang">S. Yang</span>, and K. Yee</p>
           <p><strong>Title:</strong> Design rule extraction using multi-fidelity surrogate model for unmanned combat aerial vehicles</p>
