--- a/index.html
+++ b/index.html
@@ -646,6 +646,14 @@
 					<div id="page-4" class="page four">
 						<h2 class="heading">News</h2>
 		<div class="news-item ftco-animate">
+			<img src="images/image_3.jpg" alt="Award ceremony">
+			<div>
+				<span class="date">Nov. 12, 2025</span>
+				<h4>Received the HYU IDEAL Lab Impact Award</h4>
+				<p>Honored to be recognized for leading our data-driven design initiatives and mentoring the next wave of IDEAL researchers.</p>
+			</div>
+		</div>
+		<div class="news-item ftco-animate">
 			<img src="images/about-1.jpg" alt="IDEAL sprint">
 			<div>
 				<span class="date">Oct. 10, 2025</span>
@@ -667,14 +675,6 @@
 				<span class="date">Sep. 5, 2025</span>
 				<h4>First IDEAL seminar on physics-guided AI</h4>
 				<p>Shared our surrogate modeling pipeline with campus visitors and received energizing feedback on deployment tooling.</p>
-			</div>
-		</div>
-		<div class="news-item ftco-animate">
-			<img src="images/image_2.png" alt="Joined SDL">
-			<div>
-				<span class="date">Aug. 25, 2025</span>
-				<h4>Joined SDL at KAIST</h4>
-				<p>Excited to begin this journey and hoping for many joyful days of research ahead.</p>
 			</div>
 		</div>
 	<div class="mt-3 text-center">
