--- a/news.html
+++ b/news.html
@@ -178,6 +178,14 @@
 
       <div class="news-wrapper">
         <div class="news-item ftco-animate">
+          <img src="images/image_3.jpg" alt="Award ceremony">
+          <div>
+            <span class="date">Nov. 12, 2025</span>
+            <h4>Received the HYU IDEAL Lab Impact Award</h4>
+            <p>Honored to be recognized for leading our data-driven design initiatives and mentoring the next wave of IDEAL researchers.</p>
+          </div>
+        </div>
+        <div class="news-item ftco-animate">
           <img src="images/about-1.jpg" alt="IDEAL sprint">
           <div>
             <span class="date">Oct. 10, 2025</span>
