--- a/index.html
+++ b/index.html
@@ -246,6 +246,7 @@
     line-height: 1.6;
   }
 
+
   .hero-wrap h2.hero-brand {
     font-size: 1.5rem !important;
     margin-top: 0 !important;
@@ -442,6 +443,16 @@
     letter-spacing: 0.02em;
   }
 
+  /* Scroll hint */
+  .scroll-hint {
+    margin-top: 0.75rem;
+    text-align: center;
+    font-size: 0.9rem;
+    color: #999;
+    letter-spacing: 0.08em;
+    text-transform: uppercase;
+  }
+
   /* Resume 섹션 헤딩 */
   .page .heading {
     font-size: 1.6rem !important;
@@ -553,7 +564,7 @@
 						<h2 class="hero-brand"><span class="letter-highlight">I</span>ntellectual <span class="letter-highlight">D</span>esign for <span class="letter-highlight">E</span>ngineering <span class="letter-highlight">A</span>pplications <span class="letter-highlight">L</span>aboratory</h2>
 						<h2> We are at the intersection of
 							<span class="txt-rotate" data-period="2000" data-speed="120"
-								data-rotate='[ "Engineering Design & AI"]'></span>
+								data-rotate='[ "Engineering Design &amp; AI"]'></span>
 						</h2>
 					</div>
 				</div>
@@ -564,6 +575,7 @@
 			<a href="#" class="mouse-icon">
 				<div class="mouse-wheel"><span class="ion-ios-arrow-round-down"></span></div>
 			</a>
+			<p class="scroll-hint">Scroll down</p>
 		</div>
 	</section>
 
