--- a/index.html
+++ b/index.html
@@ -443,16 +443,6 @@
     letter-spacing: 0.02em;
   }
 
-  /* Scroll hint */
-  .scroll-hint {
-    margin-top: 0.75rem;
-    text-align: center;
-    font-size: 0.9rem;
-    color: #999;
-    letter-spacing: 0.08em;
-    text-transform: uppercase;
-  }
-
   /* Resume 섹션 헤딩 */
   .page .heading {
     font-size: 1.6rem !important;
@@ -563,8 +553,7 @@
 						<h1>IDEAL</h1>
 						<h2 class="hero-brand"><span class="letter-highlight">I</span>ntellectual <span class="letter-highlight">D</span>esign for <span class="letter-highlight">E</span>ngineering <span class="letter-highlight">A</span>pplications <span class="letter-highlight">L</span>aboratory</h2>
 						<h2> We are at the intersection of
-							<span class="txt-rotate" data-period="2000" data-speed="120"
-								data-rotate='[ "Engineering Design &amp; AI"]'></span>
+							<span class="txt-rotate" data-period="2000" data-speed="120" data-rotate='[ "Engineering Design &amp; AI"]'></span>
 						</h2>
 					</div>
 				</div>
@@ -575,7 +564,7 @@
 			<a href="#" class="mouse-icon">
 				<div class="mouse-wheel"><span class="ion-ios-arrow-round-down"></span></div>
 			</a>
-			<p class="scroll-hint">Scroll down</p>
+			<div class="scroll-down-text">Scroll down</div>
 		</div>
 	</section>
 
