--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
 					</div>
 					<p>
 						&copy; IDEAL, Hanyang University ERICA. All rights reserved.<br>
-						<span class="template-credit">This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></span>
+						<span class="template-credit">This template is made by <a href="https://colorlib.com" target="_blank">Colorlib</a></span>
 					</p>
 				</div>
 			</div>
