--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
 						<img src="images/HYU_logo_singlecolor_png.png" alt="Hanyang University" class="hero-logo img-fluid">
 <!--						<span class="subheading">Hello! Here is</span>-->
 						<h1>IDEAL</h1>
-						<h2 class="hero-brand"><span class="letter-highlight">I</span>ntellectual <span class="letter-highlight">D</span>esign for <span class="letter-highlight">E</span>ngineering <span class="letter-highlight">A</span>pplications <span class="letter-highlight">L</span>aboratory</h2>
+						<h2 class="hero-brand"><span class="letter-highlight">I</span>ntelligent <span class="letter-highlight">D</span>esign for <span class="letter-highlight">E</span>ngineering <span class="letter-highlight">A</span>pplications <span class="letter-highlight">L</span>aboratory</h2>
 						<h2> We are at the intersection of
 							<span class="txt-rotate" data-period="2000" data-speed="120" data-rotate='[ "Engineering Design &amp; AI"]'></span>
 						</h2>
