--- a/team-advisor.html
+++ b/team-advisor.html
@@ -647,7 +647,7 @@
 							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
 								<path d="M2 4h20a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2zm0 2v.52l10 6.25 10-6.25V6H2zm0 12h20V8.5l-9.4 5.9a1 1 0 0 1-1.2 0L2 8.5V18z"/>
 							</svg>
-							<a href="mailto:sunwoongy@gmail.com">E-mail: sunwoongy@gmail.com</a>
+							<a href="mailto:sunwoongy@hanyang.ac.kr">E-mail: sunwoongy@hanyang.ac.kr</a>
 						</div>
 					</div>
 					<div class="social-icons mt-4">
