--- a/index.html
+++ b/index.html
@@ -509,6 +509,19 @@
       font-size: 1.5rem !important;
     }
   }
+
+  /* txt-fade 효과 색상 */
+  .txt-fade {
+    color: #0E4A84 !important;
+    font-weight: 700 !important;
+    display: inline-block;
+    text-decoration: none !important;
+  }
+
+  .hero-wrap .txt-fade {
+    color: #0E4A84 !important;
+    text-decoration: none !important;
+  }
 </style>
 </head>
 
@@ -552,8 +565,13 @@
 <!--						<span class="subheading">Hello! Here is</span>-->
 						<h1>IDEAL</h1>
 						<h2 class="hero-brand"><span class="letter-highlight">I</span>ntelligent <span class="letter-highlight">D</span>esign for <span class="letter-highlight">E</span>ngineering <span class="letter-highlight">A</span>pplications <span class="letter-highlight">L</span>aboratory</h2>
+						<!-- Original txt-rotate effect (commented out)
 						<h2> We are at the intersection of
 							<span class="txt-rotate" data-period="2000" data-speed="120" data-rotate='[ "Engineering Design &amp; AI"]'></span>
+						</h2>
+						-->
+						<h2> We are at the intersection of
+							<span style="color: #0E4A84; text-decoration: none;">Engineering Design</span> <span class="txt-fade" data-texts='["& AI"]' data-fade-speed="20" data-wait="500"></span>
 						</h2>
 					</div>
 				</div>
