--- a/index.html
+++ b/index.html
@@ -570,8 +570,8 @@
 							<span class="txt-rotate" data-period="2000" data-speed="120" data-rotate='[ "Engineering Design &amp; AI"]'></span>
 						</h2>
 						-->
-						<h2> We are at the intersection of
-							<span style="color: #0E4A84; text-decoration: none;">Engineering Design</span> <span class="txt-fade" data-texts='["& AI"]' data-fade-speed="20" data-wait="500"></span>
+						<h2> We leverage
+							<span class="txt-fade" data-texts='["AI"]' data-fade-speed="20" data-wait="100"></span> for <span style="color: #0E4A84; text-decoration: none;">Engineering Design</span>
 						</h2>
 					</div>
 				</div>
