--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
 						</h2>
 						-->
 						<h2> We craft
-							<span class="txt-fade" data-texts='["AI"]' data-fade-speed="20" data-wait="100"></span> tailored for <span style="color: #0E4A84; text-decoration: none;">Engineering Design</span>
+							<span class="txt-fade" data-texts='["AI"]' data-fade-speed="20" data-wait="100"></span> tailored for <span style="color: #0E4A84; text-decoration: none; font-weight: 700;">Engineering Design</span>
 						</h2>
 					</div>
 				</div>
