--- a/news.html
+++ b/news.html
@@ -229,16 +229,19 @@
     </div>
   </section>
 
-  <footer class="ftco-footer ftco-section">
+  <footer class="ftco-footer ftco-section" style="padding: 2rem 0;">
     <div class="container">
       <div class="row">
-        <div class="col-md-12 text-center">
-          <div class="footer-logo">
-            <img src="images/HYU_logotype_ERICA_blue_kor_eng.png" alt="Hanyang University ERICA logo">
+        <div class="col-md-12">
+          <div style="display: flex; align-items: center; justify-content: center; gap: 3rem;">
+            <div class="footer-logo" style="background: transparent;">
+              <img src="images/01 캐릭터 마크 - 기본형-04.png" alt="Hanyang University ERICA logo" style="max-height: 240px;">
+            </div>
+            <p style="text-align: center; margin: 0;">
+              &copy; IDEAL, Hanyang University ERICA. All rights reserved.<br>
+              <span class="template-credit">This template is made by <a href="https://colorlib.com" target="_blank">Colorlib</a></span>
+            </p>
           </div>
-          <p>&copy; IDEAL, Hanyang University ERICA. All rights reserved.<br>
-            <span>This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a></span>
-          </p>
         </div>
       </div>
     </div>
