--- a/single.html
+++ b/single.html
@@ -291,7 +291,7 @@
       </div>
     </section> <!-- .section -->
 
-    <footer class="ftco-footer ftco-section">
+    <footer class="ftco-footer ftco-section" style="padding: 2rem 0;">
       <div class="container">
         <div class="row mb-5">
           <div class="col-md">
@@ -343,11 +343,16 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-12 text-center">
-
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+          <div class="col-md-12">
+            <div style="display: flex; align-items: center; justify-content: center; gap: 3rem;">
+              <div class="footer-logo" style="background: transparent;">
+                <img src="images/01 캐릭터 마크 - 기본형-04.png" alt="Hanyang University ERICA logo" style="max-height: 240px;">
+              </div>
+              <p style="text-align: center; margin: 0;">
+                &copy; IDEAL, Hanyang University ERICA. All rights reserved.<br>
+                <span class="template-credit">This template is made by <a href="https://colorlib.com" target="_blank">Colorlib</a></span>
+              </p>
+            </div>
           </div>
         </div>
       </div>
