--- a/news.html
+++ b/news.html
@@ -147,6 +147,12 @@
 
       .navbar-toggler {
         border-color: #000000 !important;
+        color: #000000 !important;
+      }
+
+      .navbar-toggler .oi,
+      .navbar-toggler span {
+        color: #000000 !important;
       }
 
       .navbar-toggler-icon {
