--- a/publications.html
+++ b/publications.html
@@ -194,6 +194,12 @@
 
       .navbar-toggler {
         border-color: #000000 !important;
+        color: #000000 !important;
+      }
+
+      .navbar-toggler .oi,
+      .navbar-toggler span {
+        color: #000000 !important;
       }
 
       /* 모바일에서 navbar 브랜드 크기 조정 */
