--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
   #ftco-navbar {
     background-color: #f3f6fb !important;
     border-bottom: 1px solid rgba(0, 0, 0, 0.05);
+    padding-top: 1.5rem !important;
+    padding-bottom: 1.5rem !important;
   }
 
   /* 민트색 컬러 포인트 추가 */
@@ -529,6 +531,14 @@
     /* 모바일에서 University 단어 숨기기 */
     .university-text {
       display: none !important;
+    }
+
+    /* 모바일에서 펼쳐진 메뉴 배경색 투명도 추가 */
+    .navbar-collapse {
+      background-color: rgba(243, 246, 251, 0.95) !important;
+      margin-top: 1rem;
+      padding: 1rem;
+      border-radius: 0.5rem;
     }
 
     /* Hero 섹션 텍스트 크기 축소 */
