--- a/news.html
+++ b/news.html
@@ -52,6 +52,10 @@
       color: #000000 !important;
     }
 
+    .navbar-brand .university-text {
+      color: #000000 !important;
+    }
+
     .navbar-brand::before,
     .navbar-brand::after {
       display: none !important;
@@ -59,7 +63,7 @@
 
     .navbar-nav .nav-link {
       font-size: 0.9rem !important;
-      font-weight: 500 !important;
+      font-weight: 700 !important;
     }
 
     .navbar-nav .nav-link:hover {
@@ -78,8 +82,6 @@
     #ftco-navbar {
       background-color: #f3f6fb !important;
       border-bottom: 1px solid rgba(0, 0, 0, 0.05);
-      padding-top: 1.5rem !important;
-      padding-bottom: 1.5rem !important;
     }
 
     .heading-section h2 {
@@ -184,6 +186,12 @@
         border-radius: 0.5rem;
       }
 
+      /* 모바일 navbar height 조정 */
+      #ftco-navbar {
+        padding-top: 1rem !important;
+        padding-bottom: 1rem !important;
+      }
+
       /* Footer 세로 배치 */
       .ftco-footer .col-md-12 > div {
         flex-direction: column !important;
@@ -192,6 +200,12 @@
 
       .footer-logo img {
         max-height: 150px !important;
+      }
+
+      /* Footer 텍스트 줄바꿈 */
+      .footer-line-1::after {
+        content: '\A';
+        white-space: pre;
       }
 
       .heading-section h2 {
@@ -299,8 +313,8 @@
               <img src="images/01 캐릭터 마크 - 기본형-04.png" alt="Hanyang University ERICA logo" style="max-height: 240px;">
             </div>
             <p style="text-align: center; margin: 0;">
-              &copy; IDEAL, Hanyang University ERICA.<br>
-              All rights reserved.<br>
+              <span class="footer-line-1">&copy; IDEAL, Hanyang University ERICA.</span>
+              <span class="footer-line-2">All rights reserved.</span><br>
               <span class="template-credit">This template is made by <a href="https://colorlib.com" target="_blank">Colorlib</a></span>
             </p>
           </div>
