--- a/team-advisor.html
+++ b/team-advisor.html
@@ -150,6 +150,11 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.05);
   }
 
+  /* Menu item bold 처리 */
+  .navbar-nav .nav-link {
+    font-weight: 700 !important;
+  }
+
   /* 민트색 컬러 포인트 추가 */
   .navbar-nav .nav-link:hover {
     color: #0E4A84 !important;
