--- a/publications.html
+++ b/publications.html
@@ -223,10 +223,11 @@
 
       /* 모바일에서 펼쳐진 메뉴 배경색 투명도 추가 */
       .navbar-collapse {
-        background-color: rgba(243, 246, 251, 0.95) !important;
+        background-color: rgba(243, 246, 251, 0.85) !important;
         margin-top: 1rem;
         padding: 1rem;
         border-radius: 0.5rem;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
       }
 
       /* 모바일 navbar height 조정 */
