--- a/team-advisor.html
+++ b/team-advisor.html
@@ -150,8 +150,9 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.05);
   }
 
-  /* Menu item bold 처리 */
+  /* Menu item bold 처리 및 크기 조정 */
   .navbar-nav .nav-link {
+    font-size: 1.1rem !important;
     font-weight: 700 !important;
   }
 
