--- a/publications.html
+++ b/publications.html
@@ -194,6 +194,7 @@
       /* 모바일 navbar 텍스트 색상 수정 */
       .navbar-nav .nav-link {
         color: #000000 !important;
+        font-size: 0.9rem !important;
       }
 
       .navbar-toggler {
