--- a/publications.html
+++ b/publications.html
@@ -195,6 +195,7 @@
       .navbar-nav .nav-link {
         color: #000000 !important;
         font-size: 0.9rem !important;
+        font-weight: 700 !important;
       }
 
       .navbar-toggler {
