--- a/team-advisor.html
+++ b/team-advisor.html
@@ -150,10 +150,10 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.05);
   }
 
-  /* Menu item bold 처리 및 크기 조정 */
+  /* Menu item 스타일 */
   .navbar-nav .nav-link {
-    font-size: 1.1rem !important;
-    font-weight: 700 !important;
+    font-size: 0.9rem !important;
+    font-weight: 500 !important;
   }
 
   /* 민트색 컬러 포인트 추가 */
