--- a/team-researchers.html
+++ b/team-researchers.html
@@ -492,7 +492,7 @@
     }
 
     /* 모바일 navbar 텍스트 색상 수정 */
-    .navbar-nav .nav-link {
+    #ftco-navbar .navbar-nav .nav-link {
       color: #000000 !important;
       font-size: 0.9rem !important;
       font-weight: 700 !important;
