--- a/join-us.html
+++ b/join-us.html
@@ -211,7 +211,7 @@
         <div class="col-md-8 heading-section text-center ftco-animate">
           <span class="subheading">Join Us</span>
           <h2 class="mb-4">IDEAL 초기 멤버 모집</h2>
-          <p>AI 기술로 공학 설계의 패러다임을 바꿀 젊고 역동적인 연구실, IDEAL이 첫 발을 내디뎠습니다.<br>지능형 설계의 새로운 기준을 세우며, 연구실의 문화를 함께 정립해 나갈 주도적이고 열의 넘치는 동료를 찾습니다.</p>
+          <p>AI 기술로 공학 설계의 패러다임을 바꿀 젊고 역동적인 연구실 IDEAL이 첫 발을 내디뎠습니다.<br>지능형 설계의 새로운 기준을 세우며, 연구실의 문화를 함께 정립해 나갈 주도적이고 열의 넘치는 동료를 찾습니다.</p>
         </div>
       </div>
 
@@ -243,7 +243,7 @@
               <ul>
                 <li><strong>학부연구생</strong> (3학년 이상 지원 가능)</li>
                 <li><strong>학·석사 연계과정</strong></li>
-                <li><strong>석사과정</strong> (최소 2개월 학부연구생 경험 권장 — <span class="emphasis-note">서로의 스타일을 파악해 석사 과정에서 더 빠르게 성장하기 위함</span>)</li>
+                <li><strong>석사과정</strong> (최소 2개월 학부연구생 경험 권장: <span class="emphasis-note">서로의 스타일을 파악해 석사 과정에서 더 빠르게 성장하기 위함</span>)</li>
                 <li><strong>박사과정</strong></li>
               </ul>
             </div>
@@ -253,7 +253,7 @@
               <ul>
                 <li><strong>연구실 투입 후 2년 내 SCI(E) 논문 게재</strong>를 목표로 맞춤 지도</li>
                 <li><strong>국내외 학회 발표·참가 전폭 지원</strong>과 논문 실적 중심 커리어 멘토링</li>
-                <li><strong>서울대학교, KAIST, POSTECH, DLR, Purdue University</strong> 등과의 협업 기회 확대</li>
+                <li><strong>서울대학교, KAIST, POSTECH, 독일항공우주센터(DLR), Purdue University</strong> 등과의 협업 기회 확대</li>
                 <li><strong>자동차·반도체·항공 등 산학 프로젝트</strong>로 산업 인공지능 역량 및 취업용 포트폴리오 스토리라인을 지도교수가 직접 설계 지원</li>
               </ul>
             </div>
