--- a/join-us.html
+++ b/join-us.html
@@ -104,6 +104,14 @@
       color: #555 !important;
     }
 
+    .join-hero-img {
+      width: 100%;
+      max-width: 420px;
+      border-radius: 16px;
+      box-shadow: 0 25px 65px rgba(15, 23, 42, 0.15);
+      object-fit: cover;
+    }
+
     .recruitment-card {
       background: #fff;
       border-radius: 18px;
@@ -140,6 +148,10 @@
 
     .recruitment-card li {
       margin-bottom: 0.35rem;
+    }
+
+    .recruitment-card p {
+      text-indent: 1rem;
     }
 
     .recruitment-card .emphasis-note {
@@ -198,6 +210,10 @@
       .heading-section h2 {
         font-size: 1.5rem !important;
       }
+
+      .join-hero-img {
+        margin-top: 1.5rem;
+      }
     }
   </style>
 </head>
@@ -207,39 +223,38 @@
 
   <section class="ftco-section bg-light" id="join-section">
     <div class="container">
-      <div class="row justify-content-center mb-5 pb-3 mt-4">
-        <div class="col-md-8 heading-section text-center ftco-animate">
+      <div class="ftco-animate text-center mb-4">
+        <img src="images/Recruiting_crop.png" alt="Recruiting new members" class="join-hero-img img-fluid">
+      </div>
+      <div class="row justify-content-center mb-4">
+        <div class="col-md-9 heading-section text-center ftco-animate">
           <span class="subheading">Join Us</span>
           <h2 class="mb-4">IDEAL 초기 멤버 모집</h2>
           <p>AI 기술로 공학 설계의 패러다임을 바꿀 젊고 역동적인 연구실 IDEAL이 첫 발을 내디뎠습니다.<br>지능형 설계의 새로운 기준을 세우며, 연구실의 문화를 함께 정립해 나갈 주도적이고 열의 넘치는 동료를 찾습니다.</p>
         </div>
       </div>
-
-      <div class="row justify-content-center">
+      <div class="row justify-content-center" id="join-details">
         <div class="col-lg-10 ftco-animate">
           <div class="recruitment-card">
             <h3>자주 묻는 질문</h3>
 
             <div class="faq-item">
-              <div class="faq-question">Q. 어떤 연구실 문화를 만들어 가고 있나요?</div>
-              <p><strong>IDEAL은 이제 막 기반을 다지기 시작한 한양대 지능형 설계 연구실</strong>로, 젊은 교수진의 추진력을 바탕으로 열린 의사소통과 빠른 실행을 최우선에 둡니다.</p>
-              <p>혼자 연구하기보다 서로의 시행착오와 아이디어를 즉시 공유하며 <strong>초기 멤버가 연구실의 역사와 전통을 직접 설계</strong>합니다. 지도교수의 밀착 코칭과 체계적인 로드맵으로 방황 없이 성장할 수 있는 환경을 제공합니다.</p>
+              <div class="faq-question">어떤 연구실 문화를 만들어 가고 있나요?</div>
+              <p><strong>IDEAL은 이제 막 기반을 다지기 시작한 한양대 지능형 설계 연구실</strong>로, 젊은 교수진의 추진력을 바탕으로 열린 의사소통과 빠른 실행을 최우선에 둡니다. 혼자 연구하기보다 서로의 시행착오와 아이디어를 즉시 공유하며 <strong>초기 멤버가 연구실의 역사와 전통을 직접 설계</strong>합니다. 지도교수의 밀착 코칭과 체계적인 로드맵으로 방황 없이 성장할 수 있는 환경을 제공합니다.</p>
             </div>
 
             <div class="faq-item">
-              <div class="faq-question">Q. AI 경험이 있어야 지원할 수 있나요?</div>
-              <p><strong>AI 경험은 필수가 아닙니다.</strong> 지도교수는 석·박사와 박사후 연구원 시절까지 직접 AI 모델을 코딩해가며 기계·항공 분야용 AI 전문지식을 쌓았으며, <strong>AI를 처음 접하는 학생도 빠르게 성장하도록 노하우를 전수</strong>합니다.</p>
-              <p><strong>수월한 의사소통 능력과 배우고자 하는 열의</strong>는 반드시 갖춰야 할 기본 역량입니다.</p>
+              <div class="faq-question">AI 경험이 있어야 지원할 수 있나요?</div>
+              <p><strong>AI 경험은 필수가 아닙니다.</strong> 지도교수는 석·박사와 박사후 연구원 시절까지 직접 AI 모델을 코딩해가며 기계·항공 분야용 AI 전문지식을 쌓았으며, <strong>AI를 처음 접하는 학생도 빠르게 성장하도록 노하우를 전수</strong>합니다. <strong>수월한 의사소통 능력과 배우고자 하는 열의</strong>는 반드시 갖춰야 할 기본 역량입니다.</p>
             </div>
 
             <div class="faq-item">
-              <div class="faq-question">Q. AI 분야 말고 다른 전공에도 관심이 있는데 어떻게 해야 할까요?</div>
-              <p><strong>우리 연구실은 AI 자체만 연구하지 않고</strong> 기계·항공 전반에서 필요한 문제 정의와 솔루션 설계를 함께합니다.</p>
-              <p>로봇 동역학, 자동차 충돌 해석, EV 배터리, 반도체 설계 등 핵심 적용 분야 학습을 적극 지원하며, <strong>각 분야 국내 전문가와의 공동연구를 직접 매칭</strong>해 해당 산업에서 통용되는 AI 전문가로 성장하도록 돕습니다.</p>
+              <div class="faq-question">AI 분야 말고 다른 전공에도 관심이 있는데 어떻게 해야 할까요?</div>
+              <p><strong>우리 연구실은 AI 자체만 연구하지 않고</strong> 기계·항공 전반에서 필요한 문제 정의와 솔루션 설계를 함께합니다. 로봇 동역학, 자동차 충돌 해석, EV 배터리, 반도체 설계 등 핵심 적용 분야 학습을 적극 지원하며, <strong>각 분야 국내 전문가와의 공동연구를 직접 매칭</strong>해 해당 산업에서 통용되는 AI 전문가로 성장하도록 돕습니다.</p>
             </div>
 
             <div class="faq-item">
-              <div class="faq-question">Q. 어떤 트랙을 모집하나요?</div>
+              <div class="faq-question">어떤 트랙을 모집하나요?</div>
               <ul>
                 <li><strong>학부연구생</strong> (3학년 이상 지원 가능)</li>
                 <li><strong>학·석사 연계과정</strong></li>
@@ -249,7 +264,7 @@
             </div>
 
             <div class="faq-item">
-              <div class="faq-question">Q. 이 연구실에서 어떤 것을 기대할 수 있나요?</div>
+              <div class="faq-question">이 연구실에서 어떤 것을 기대할 수 있나요?</div>
               <ul>
                 <li><strong>연구실 투입 후 2년 내 SCI(E) 논문 게재</strong>를 목표로 맞춤 지도</li>
                 <li><strong>국내외 학회 발표·참가 전폭 지원</strong>과 논문 실적 중심 커리어 멘토링</li>
