--- a/team-researchers.html
+++ b/team-researchers.html
@@ -358,13 +358,26 @@
   .recruitment-link-btn {
     display: inline-flex;
     align-items: center;
-    gap: 0.4rem;
+    gap: 0.5rem;
     font-weight: 600;
-    padding: 0.65rem 1.5rem;
+    padding: 0.7rem 1.9rem;
     border-radius: 999px;
     background: #0E4A84;
     color: #fff;
-    transition: background 0.2s ease;
+    transition: transform 0.2s ease, box-shadow 0.2s ease, background 0.2s ease;
+    box-shadow: 0 10px 25px rgba(14, 74, 132, 0.25);
+  }
+
+  .recruitment-link-btn span.arrow-icon {
+    display: inline-flex;
+    width: 20px;
+    height: 20px;
+    background: #fff;
+    color: #0E4A84;
+    border-radius: 50%;
+    align-items: center;
+    justify-content: center;
+    font-size: 0.95rem;
   }
 
   .recruitment-link-btn:hover,
@@ -372,6 +385,13 @@
     text-decoration: none;
     color: #fff;
     background: #0b3b68;
+    transform: translateY(-2px);
+    box-shadow: 0 14px 30px rgba(14, 74, 132, 0.35);
+  }
+
+  .recruitment-link-btn:hover span.arrow-icon,
+  .recruitment-link-btn:focus span.arrow-icon {
+    color: #0b3b68;
   }
 
   .team-card-placeholder {
@@ -622,7 +642,7 @@
 				<div class="col-lg-9">
 					<div class="recruitment-link-card">
 						<p>IDEAL 연구실은 이제 막 기반을 다지기 시작한 팀으로, 초기 멤버를 함께 모시고 있습니다.<br>더 자세한 모집 안내는 아래 버튼을 눌러 확인해 주세요.</p>
-						<a class="recruitment-link-btn" href="join-us.html">신규 멤버 모집 안내 보기 →</a>
+						<a class="recruitment-link-btn" href="join-us.html">신규 멤버 모집 안내 보기<span class="arrow-icon">→</span></a>
 					</div>
 				</div>
 			</div>
