--- a/join-us.html
+++ b/join-us.html
@@ -240,17 +240,22 @@
 
             <div class="faq-item">
               <div class="faq-question">어떤 연구실 문화를 만들어 가고 있나요?</div>
-              <p><strong>IDEAL은 이제 막 기반을 다지기 시작한 한양대 지능형 설계 연구실</strong>로, 젊은 교수진의 추진력을 바탕으로 열린 의사소통과 빠른 실행을 최우선에 둡니다. 혼자 연구하기보다 서로의 시행착오와 아이디어를 즉시 공유하며 <strong>초기 멤버가 연구실의 역사와 전통을 직접 설계</strong>합니다. 지도교수의 밀착 코칭과 체계적인 로드맵으로 방황 없이 성장할 수 있는 환경을 제공합니다.</p>
+              <p><strong>IDEAL은 이제 막 기반을 다지기 시작한 한양대 지능형 설계 연구실</strong>로, 젊은 지도교수의 추진력을 바탕으로 열린 의사소통과 빠른 실행을 최우선에 둡니다. 혼자 연구하기보다 서로의 시행착오와 아이디어를 즉시 공유하며 <strong>초기 멤버가 연구실의 역사와 전통을 직접 설계</strong>합니다. 지도교수가 제공하는 체계적인 코칭과 연구 로드맵으로 방황 없이 성장할 수 있는 환경을 제공합니다.</p>
             </div>
 
             <div class="faq-item">
               <div class="faq-question">AI 경험이 있어야 지원할 수 있나요?</div>
-              <p><strong>AI 경험은 필수가 아닙니다.</strong> 지도교수는 석·박사와 박사후 연구원 시절까지 직접 AI 모델을 코딩해가며 기계·항공 분야용 AI 전문지식을 쌓았으며, <strong>AI를 처음 접하는 학생도 빠르게 성장하도록 노하우를 전수</strong>합니다. <strong>수월한 의사소통 능력과 배우고자 하는 열의</strong>는 반드시 갖춰야 할 기본 역량입니다.</p>
+              <p><strong>AI 경험은 필수가 아닙니다.</strong> 지도교수는 석·박사와 박사후 연구원 시절까지 직접 AI 모델을 코딩해가며 기계·항공 분야에 특화된 AI 전문지식을 쌓았으며, <strong>AI를 처음 접하는 학생도 빠르게 성장하도록 노하우를 직접 전수</strong>합니다. <strong>수월한 의사소통 능력과 배우고자 하는 열의</strong>만 준비해주셔도 됩니다.</p>
             </div>
 
             <div class="faq-item">
               <div class="faq-question">AI 분야 말고 다른 전공에도 관심이 있는데 어떻게 해야 할까요?</div>
-              <p><strong>우리 연구실은 AI 자체만 연구하지 않고</strong> 기계·항공 전반에서 필요한 문제 정의와 솔루션 설계를 함께합니다. 로봇 동역학, 자동차 충돌 해석, EV 배터리, 반도체 설계 등 핵심 적용 분야 학습을 적극 지원하며, <strong>각 분야 국내 전문가와의 공동연구를 직접 매칭</strong>해 해당 산업에서 통용되는 AI 전문가로 성장하도록 돕습니다.</p>
+              <p><strong>우리 연구실은 AI 자체만을 독립적으로 연구하지 않고</strong> 기계·항공 분야 전반에서 AI가 필요한 문제를 발굴하고 이를 위한 솔루션을 기획합니다. 학생분들이 평소에 관심 갖고 계신 분야(예를 들어 로봇 동역학, 자동차 충돌 해석, EV 배터리/모터, 반도체 설계 등)에 대한 학습을 적극 지원하며, <strong>각 분야 국내 전문가와의 공동연구를 직접 매칭</strong>해 드림으로써 해당 산업에 특화된 AI 전문가로 성장할 수 있도록 합니다.</p>
+            </div>
+
+            <div class="faq-item">
+              <div class="faq-question">구체적인 연구 분야는 어떻게 정해지나요?</div>
+              <p><strong>우리 연구실은 지원자가 원하는 연구 분야에 최대한 맞춰 매칭하는 것을 원칙</strong>으로 합니다. 초기 상담을 통해 관심 영역과 커리어 목표를 충분히 공유한 뒤, 지도교수가 프로젝트와 협업 파트너를 직접 매칭합니다. 진행 중 상황에 따라 세부 주제가 조정될 수는 있지만, 사전에 충분히 협의하고 합의된 방향으로 연구를 이어가니 안심하셔도 됩니다.</p>
             </div>
 
             <div class="faq-item">
@@ -268,8 +273,8 @@
               <ul>
                 <li><strong>연구실 투입 후 2년 내 SCI(E) 논문 게재</strong>를 목표로 맞춤 지도</li>
                 <li><strong>국내외 학회 발표·참가 전폭 지원</strong>과 논문 실적 중심 커리어 멘토링</li>
-                <li><strong>서울대학교, KAIST, POSTECH, 독일항공우주센터(DLR), Purdue University</strong> 등과의 협업 기회 확대</li>
-                <li><strong>자동차·반도체·항공 등 산학 프로젝트</strong>로 산업 인공지능 역량 및 취업용 포트폴리오 스토리라인을 지도교수가 직접 설계 지원</li>
+                <li><strong>서울대학교, KAIST, POSTECH, 독일항공우주센터(DLR), Purdue University</strong> 등과의 협업 기회 제공</li>
+                <li><strong>자동차·반도체·항공 등 다양한 분야와의 산학 프로젝트</strong>를 추진해 산업 인공지능 역량을 바탕으로 한 취업용 포트폴리오 제공</li>
               </ul>
             </div>
 
