--- a/team-researchers.html
+++ b/team-researchers.html
@@ -649,22 +649,22 @@
 
 			<div class="row justify-content-center">
 				<div class="col-md-6 col-lg-4 mb-4 ftco-animate">
-					<div class="team-card">
-						<div class="team-role">Master's Student</div>
-						<h4>Yubin Lee</h4>
-						<p>Researches engineering design optimization and AI-driven generative design.</p>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-4 mb-4 ftco-animate">
 					<div class="team-card team-card-placeholder">
-						<div class="team-role">Researcher</div>
+						<div class="team-role">M.S. Candidate</div>
 						<h4>Next Member</h4>
 						<p>More IDEAL researchers will be introduced soon.</p>
 					</div>
 				</div>
 				<div class="col-md-6 col-lg-4 mb-4 ftco-animate">
 					<div class="team-card team-card-placeholder">
-						<div class="team-role">Researcher</div>
+						<div class="team-role">M.S. Candidate</div>
+						<h4>Next Member</h4>
+						<p>More IDEAL researchers will be introduced soon.</p>
+					</div>
+				</div>
+				<div class="col-md-6 col-lg-4 mb-4 ftco-animate">
+					<div class="team-card team-card-placeholder">
+						<div class="team-role">M.S. Candidate</div>
 						<h4>Next Member</h4>
 						<p>More IDEAL researchers will be introduced soon.</p>
 					</div>
