--- a/team-advisor.html
+++ b/team-advisor.html
@@ -738,6 +738,13 @@
 							</div>
 							<div class="resume-wrap d-flex ftco-animate">
 								<div class="text">
+									<span class="date">Mar. 2026 - Present</span>
+									<h2>Visiting Professor, Seoul Digital University</h2>
+									<span class="position">Applied AI Practice Major</span>
+								</div>
+							</div>
+							<div class="resume-wrap d-flex ftco-animate">
+								<div class="text">
 									<span class="date">Sep. 2023 - Feb. 2026</span>
 									<h2>Postdoctoral Researcher, KAIST</h2>
 									<span class="position">CCS Graduate School of Mobility</span>
