--- a/publications.html
+++ b/publications.html
@@ -172,6 +172,65 @@
       margin-bottom: 0.35rem;
     }
 
+    .under-review-list {
+      margin-top: 1rem;
+    }
+
+    .under-review-entry + .under-review-entry {
+      margin-top: 1rem;
+      padding-top: 0.8rem;
+      border-top: 1px dashed rgba(14, 74, 132, 0.2);
+    }
+
+    .under-review-entry p {
+      margin-bottom: 0.2rem;
+    }
+
+    .publication-stats {
+      background: #0E4A84;
+      color: #fff;
+      border-radius: 18px;
+      padding: 1.2rem 1.5rem;
+      box-shadow: 0 20px 45px rgba(15, 23, 42, 0.12);
+      text-align: center;
+      font-weight: 500;
+      margin: 0 auto 1.75rem;
+      width: 100%;
+      max-width: 340px;
+    }
+
+    .publication-stats strong {
+      font-size: 1rem;
+    }
+
+    .publication-stats-list {
+      margin-top: 0.75rem;
+      display: flex;
+      flex-direction: column;
+      gap: 0.6rem;
+    }
+
+    .publication-stat-item {
+      display: flex;
+      justify-content: center;
+      gap: 0.75rem;
+      font-size: 0.95rem;
+      line-height: 1.4;
+    }
+
+    .publication-stat-label {
+      display: inline-flex;
+      align-items: center;
+      padding: 0.15rem 0.65rem;
+      border-radius: 999px;
+      background: rgba(255, 255, 255, 0.15);
+      font-weight: 700;
+    }
+
+    .publication-stat-value {
+      font-weight: 600;
+    }
+
     .yang {
       color: #B22222;
       font-weight: 700;
@@ -278,38 +337,54 @@
 
       <div class="publications-list">
         <h3 class="pub-section-title">Under Review / In Preparation</h3>
-        <div class="publication-card ftco-animate">
+        <div class="publication-card ftco-animate under-review-card">
           <span class="pub-label">[UNDER REVIEW]</span>
-          <p><strong>[1]</strong> <strong>Authors:</strong> <span class="yang">S. Yang</span>, R. Vinuesa and N. Kang</p>
-          <p><strong>Title:</strong> Mesh-Agnostic AI for Unsteady Flow Simulation: U-Net-based Graph Neural Networks for Spatio-Temporal Forecasting</p>
-        </div>
-        <div class="publication-card ftco-animate">
-          <span class="pub-label">[UNDER REVIEW]</span>
-          <p><strong>[2]</strong> <strong>Authors:</strong> D. Lee, <span class="yang">S. Yang</span>, J.W. Oh, S.G. Cho, S. Kim and N. Kang</p>
-          <p><strong>Title:</strong> AI-powered Digital Twin of the Ocean: Reliable Uncertainty Quantification for Real-time Wave Height Prediction</p>
-        </div>
-        <div class="publication-card ftco-animate">
-          <span class="pub-label">[UNDER REVIEW]</span>
-          <p><strong>[3]</strong> <strong>Authors:</strong> J. Shin, C. Kim, <span class="yang">S. Yang</span>, M. Lee, S. J. Kim, and J. Jeon</p>
-          <p><strong>Title:</strong> Node Assigned physics-informed neural networks for thermal-hydraulic system simulation: CVH/FL module</p>
-        </div>
-        <div class="publication-card ftco-animate">
-          <span class="pub-label">[UNDER REVIEW]</span>
-          <p><strong>[4]</strong> <strong>Authors:</strong> Y.E. Kang, D. Lee, Y. Hong, <span class="yang">S. Yang</span>, and K. Yee</p>
-          <p><strong>Title:</strong> AI-Driven Surrogate Modeling Framework for Real-Time Prediction of Airfoil Lookup Tables: Application to Proprotor Optimization</p>
-        </div>
-        <div class="publication-card ftco-animate">
-          <span class="pub-label">[UNDER REVIEW]</span>
-          <p><strong>[5]</strong> <strong>Authors:</strong> J. Kim, <span class="yang">S. Yang (co-corresponding author)</span>, and N. Kang</p>
-          <p><strong>Title:</strong> Point-wise Diffusion Models for Physical Systems with Shape Variations: Application to Spatio-temporal and Large-scale system</p>
-        </div>
-        <div class="publication-card ftco-animate">
-          <span class="pub-label">[IN PREPARATION]</span>
-          <p><strong>[6]</strong> <strong>Authors:</strong> S. Kim, M. Seo, <span class="yang">S. Yang</span>, and N. Kang</p>
-          <p><strong>Title:</strong> Decoupled Dynamics Framework with Neural Fields for 3D Spatio-temporal Prediction of Vehicle Collisions</p>
+          <div class="under-review-list">
+            <div class="under-review-entry">
+              <p><strong>[1]</strong> <strong>Authors:</strong> <span class="yang">S. Yang</span>, R. Vinuesa and N. Kang</p>
+              <p><strong>Title:</strong> Mesh-Agnostic AI for Unsteady Flow Simulation: U-Net-based Graph Neural Networks for Spatio-Temporal Forecasting</p>
+            </div>
+            <div class="under-review-entry">
+              <p><strong>[2]</strong> <strong>Authors:</strong> D. Lee, <span class="yang">S. Yang</span>, J.W. Oh, S.G. Cho, S. Kim and N. Kang</p>
+              <p><strong>Title:</strong> AI-powered Digital Twin of the Ocean: Reliable Uncertainty Quantification for Real-time Wave Height Prediction</p>
+            </div>
+            <div class="under-review-entry">
+              <p><strong>[3]</strong> <strong>Authors:</strong> J. Shin, C. Kim, <span class="yang">S. Yang</span>, M. Lee, S. J. Kim, and J. Jeon</p>
+              <p><strong>Title:</strong> Node Assigned physics-informed neural networks for thermal-hydraulic system simulation: CVH/FL module</p>
+            </div>
+            <div class="under-review-entry">
+              <p><strong>[4]</strong> <strong>Authors:</strong> Y.E. Kang, D. Lee, Y. Hong, <span class="yang">S. Yang</span>, and K. Yee</p>
+              <p><strong>Title:</strong> AI-Driven Surrogate Modeling Framework for Real-Time Prediction of Airfoil Lookup Tables: Application to Proprotor Optimization</p>
+            </div>
+            <div class="under-review-entry">
+              <p><strong>[5]</strong> <strong>Authors:</strong> J. Kim, <span class="yang">S. Yang (co-corresponding author)</span>, and N. Kang</p>
+              <p><strong>Title:</strong> Point-wise Diffusion Models for Physical Systems with Shape Variations: Application to Spatio-temporal and Large-scale system</p>
+            </div>
+            <div class="under-review-entry">
+              <p><strong>[6]</strong> <strong>Authors:</strong> S. Kim, M. Seo, <span class="yang">S. Yang (co-corresponding author)</span>, and N. Kang</p>
+              <p><strong>Title:</strong> Decoupled Dynamics Framework with Neural Fields for 3D Spatio-temporal Prediction of Vehicle Collisions</p>
+            </div>
+          </div>
         </div>
 
         <h3 class="pub-section-title">Published</h3>
+        <div class="publication-stats ftco-animate">
+          <p><strong>JCR percentile snapshot</strong></p>
+          <div class="publication-stats-list">
+            <div class="publication-stat-item">
+              <span class="publication-stat-label">Top 5%</span>
+              <span class="publication-stat-value">6 papers</span>
+            </div>
+            <div class="publication-stat-item">
+              <span class="publication-stat-label">Top 5–10%</span>
+              <span class="publication-stat-value">3 papers</span>
+            </div>
+            <div class="publication-stat-item">
+              <span class="publication-stat-label">Top 10–50%</span>
+              <span class="publication-stat-value">2 papers</span>
+            </div>
+          </div>
+        </div>
         <a class="publication-card ftco-animate hoverable" href="https://academic.oup.com/jcde/article/12/10/133/8267850" target="_blank" rel="noopener noreferrer">
           <span class="pub-label"><strong>11.</strong> Journal of Computational Design and Engineering <strong>(IF: 6.1, JCR top 6.6%)</strong></span>
           <p><strong>Year:</strong> 2025</p>
