--- a/publications.html
+++ b/publications.html
@@ -200,7 +200,8 @@
     }
 
     .publication-stats strong {
-      font-size: 1rem;
+      font-size: 1.15rem;
+      letter-spacing: 0.03em;
     }
 
     .publication-stats-list {
@@ -216,6 +217,7 @@
       gap: 0.75rem;
       font-size: 0.95rem;
       line-height: 1.4;
+      align-items: center;
     }
 
     .publication-stat-label {
@@ -223,8 +225,25 @@
       align-items: center;
       padding: 0.15rem 0.65rem;
       border-radius: 999px;
-      background: rgba(255, 255, 255, 0.15);
       font-weight: 700;
+      color: #fff;
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15);
+    }
+
+    .publication-stats-list .publication-stat-item:nth-child(1) .publication-stat-label {
+      background: rgba(255, 179, 0, 0.9);
+    }
+
+    .publication-stats-list .publication-stat-item:nth-child(2) .publication-stat-label {
+      background: rgba(255, 128, 82, 0.9);
+    }
+
+    .publication-stats-list .publication-stat-item:nth-child(3) .publication-stat-label {
+      background: rgba(64, 196, 255, 0.85);
+    }
+
+    .publication-stats-list .publication-stat-item:nth-child(4) .publication-stat-label {
+      background: rgba(110, 207, 151, 0.85);
     }
 
     .publication-stat-value {
@@ -369,7 +388,7 @@
 
         <h3 class="pub-section-title">Published</h3>
         <div class="publication-stats ftco-animate">
-          <p><strong>JCR percentile snapshot</strong></p>
+          <p><strong>JCR percentile</strong></p>
           <div class="publication-stats-list">
             <div class="publication-stat-item">
               <span class="publication-stat-label">Top 5%</span>
