--- a/publications.html
+++ b/publications.html
@@ -388,7 +388,7 @@
 
         <h3 class="pub-section-title">Published</h3>
         <div class="publication-stats ftco-animate">
-          <p><strong>JCR percentile</strong></p>
+          <p><strong>JCR ranking summary</strong></p>
           <div class="publication-stats-list">
             <div class="publication-stat-item">
               <span class="publication-stat-label">Top 5%</span>
