--- a/publications.html
+++ b/publications.html
@@ -234,20 +234,37 @@
       background: rgba(255, 179, 0, 0.9);
     }
 
+    .publication-stats-list .publication-stat-item:nth-child(1) .publication-stat-value {
+      color: rgba(255, 179, 0, 0.95);
+    }
+
     .publication-stats-list .publication-stat-item:nth-child(2) .publication-stat-label {
       background: rgba(255, 128, 82, 0.9);
+    }
+
+    .publication-stats-list .publication-stat-item:nth-child(2) .publication-stat-value {
+      color: rgba(255, 128, 82, 0.95);
     }
 
     .publication-stats-list .publication-stat-item:nth-child(3) .publication-stat-label {
       background: rgba(64, 196, 255, 0.85);
     }
 
+    .publication-stats-list .publication-stat-item:nth-child(3) .publication-stat-value {
+      color: rgba(64, 196, 255, 0.95);
+    }
+
     .publication-stats-list .publication-stat-item:nth-child(4) .publication-stat-label {
       background: rgba(110, 207, 151, 0.85);
     }
 
+    .publication-stats-list .publication-stat-item:nth-child(4) .publication-stat-value {
+      color: rgba(110, 207, 151, 0.95);
+    }
+
     .publication-stat-value {
-      font-weight: 600;
+      font-weight: 700;
+      font-size: 1.15rem;
     }
 
     .yang {
