--- a/publications.html
+++ b/publications.html
@@ -122,6 +122,15 @@
       text-align: center;
     }
 
+    .pub-subsection {
+      font-size: 1rem;
+      letter-spacing: 0.1em;
+      text-transform: uppercase;
+      color: rgba(0, 0, 0, 0.7);
+      text-align: center;
+      margin: 2rem auto 1rem;
+    }
+
     .publication-card {
       display: block;
       background: #fff;
@@ -416,11 +425,23 @@
               <span class="publication-stat-value">3 papers</span>
             </div>
             <div class="publication-stat-item">
-              <span class="publication-stat-label">Top 10–50%</span>
+              <span class="publication-stat-label">Top 10–25%</span>
+              <span class="publication-stat-value">1 paper</span>
+            </div>
+            <div class="publication-stat-item">
+              <span class="publication-stat-label">Top 25–50%</span>
               <span class="publication-stat-value">2 papers</span>
             </div>
           </div>
         </div>
+        <div class="pub-subsection ftco-animate">After joining Hanyang University</div>
+        <a class="publication-card ftco-animate hoverable" href="https://link.springer.com/article/10.1007/s00158-025-04220-7" target="_blank" rel="noopener noreferrer">
+          <span class="pub-label"><strong>12.</strong> Structural and Multidisciplinary Optimization <strong>(IF: 4.0, JCR top 16.5%)</strong></span>
+          <p><strong>Year:</strong> 2026</p>
+          <p><strong>Authors:</strong> Y.E. Kang, D. Lee, Y. Hong, <span class="yang">S. Yang</span>, and K. Yee</p>
+          <p><strong>Title:</strong> Data-Driven Surrogate Modeling Framework for Real-Time Prediction of Airfoil Lookup Tables: Application to Proprotor Optimization</p>
+        </a>
+        <div class="pub-subsection ftco-animate">Before joining Hanyang University</div>
         <a class="publication-card ftco-animate hoverable" href="https://academic.oup.com/jcde/article/12/10/133/8267850" target="_blank" rel="noopener noreferrer">
           <span class="pub-label"><strong>11.</strong> Journal of Computational Design and Engineering <strong>(IF: 6.1, JCR top 6.6%)</strong></span>
           <p><strong>Year:</strong> 2025</p>
